--- a/index.html
+++ b/index.html
@@ -2,77 +2,118 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>TERMINAL_SIMULATION</title>
+    <title>S_D_L_S_SYSTEM</title>
     <style>
         body { background: #000; color: #0f0; font-family: 'Courier New', monospace; margin: 0; overflow: hidden; }
-        canvas { position: fixed; top: 0; left: 0; z-index: 1; opacity: 0.3; }
-        .ui-layer { position: relative; z-index: 10; padding: 5vw; text-align: center; }
-        #console { text-align: left; display: inline-block; font-size: 1.6vw; background: rgba(0,0,0,0.8); padding: 25px; border: 1px solid #0f0; min-width: 550px; }
-        .troll-note { position: fixed; bottom: 8px; right: 10px; color: #222; font-size: 12px; z-index: 100; font-weight: bold; }
+        canvas { position: fixed; top: 0; left: 0; opacity: 0.3; z-index: 1; }
+        .ui { position: relative; z-index: 10; padding: 5vw; text-align: center; }
+        .hidden { display: none; }
+        .warning { color: #ff3333; text-shadow: 0 0 15px #ff3333; font-weight: bold; }
+        #log-console { text-align: left; display: inline-block; font-size: 1.4vw; background: rgba(0,0,0,0.8); padding: 20px; border: 1px solid #0f0; min-width: 500px; }
+        .bar-frame { width: 100%; border: 1px solid #0f0; height: 12px; margin-top: 15px; }
+        #bar-fill { width: 0%; height: 100%; background: #0f0; }
+        /* 権利宣言（トロール証明） */
+        .disclaimer { position: fixed; bottom: 10px; right: 15px; color: #333; font-size: 10px; z-index: 100; pointer-events: none; }
     </style>
 </head>
 <body>
     <canvas id="m"></canvas>
-    <div class="ui-layer">
-        <div id="console">
-            <p id="line1"></p>
-            <p id="line2"></p>
-            <p id="line3"></p>
-            <p id="line4"></p>
+    <div class="ui">
+        <div id="step1">
+            <p>[STATUS: SCANNING]</p>
+            <h1 id="un" style="font-size: 6vw;">ACCESSING...</h1>
+        </div>
+
+        <div id="step2" class="hidden">
+            <div id="log-console">
+                <p>LOGIN_KEY: <span id="pk"></span></p>
+                <p id="st" style="font-weight:bold;"></p>
+                <div id="details">
+                    <p id="l1" class="hidden">> Loc_Data: <span id="l1-r"></span></p>
+                    <p id="l2" class="hidden">> Firewall: <span id="l2-r" style="color:red;"></span></p>
+                    <p id="l3" class="hidden">> Protocol: <span id="l3-r"></span></p>
+                    <div id="l4" class="hidden" style="margin-top:20px;">
+                        <p>> STREAMING_COORDINATES:</p>
+                        <div class="bar-frame"><div id="bar-fill"></div></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="step3" class="hidden">
+            <h1 class="warning" style="font-size: 4vw;">LOCATION_FIXED:</h1>
+            <h1 style="font-size: 8vw; margin:0; letter-spacing: -2px;">Kita, Akabane</h1>
+            <p style="color:#fff; font-size: 1.2vw; margin-top:20px;">[!] DATABASE_SYNC_SUCCESSFUL</p>
         </div>
     </div>
-    <div class="troll-note">THIS IS A TROLL / ジョークサイトです</div>
+    <div class="disclaimer">THIS IS A TROLL. NO DATA COLLECTED.</div>
 
     <script>
-        // 背景のマトリックス風エフェクト
+        // 背景デジタルレイン
         const c = document.getElementById('m'); const x = c.getContext('2d');
         c.width = window.innerWidth; c.height = window.innerHeight;
-        const matrix = "01".split("");
-        const drops = Array(Math.floor(c.width/16)).fill(1);
+        const drops = Array(Math.floor(c.width/15)).fill(1);
         function draw() {
-            x.fillStyle = "rgba(0,0,0,0.08)"; x.fillRect(0,0,c.width,c.height);
-            x.fillStyle = "#0f0"; x.font = "16px monospace";
+            x.fillStyle = "rgba(0,0,0,0.1)"; x.fillRect(0,0,c.width,c.height);
+            x.fillStyle = "#0a0"; x.font = "15px monospace";
             drops.forEach((y, i) => {
-                const txt = matrix[Math.floor(Math.random()*matrix.length)];
-                x.fillText(txt, i*16, y*16);
-                if (y*16 > c.height && Math.random() > 0.98) drops[i] = 0;
+                x.fillText(Math.floor(Math.random()*2), i*15, y*15);
+                if (y*15 > c.height && Math.random() > 0.98) drops[i] = 0;
                 drops[i]++;
             });
         }
         setInterval(draw, 50);
 
-        // コンソール風テキスト表示
-        const lines = [
-            "INITIALIZING_SYSTEM...",
-            "LOADING_MODULES...",
-            "SIMULATING_ACCESS...",
-            "OPERATION_COMPLETE."
-        ];
-        const lineElements = [
-            document.getElementById('line1'),
-            document.getElementById('line2'),
-            document.getElementById('line3'),
-            document.getElementById('line4')
-        ];
+        // トロールロジック
+        const urlParams = new URLSearchParams(window.location.search);
+        document.getElementById('un').innerText = urlParams.get('name') || "Target_User";
 
-        let lineIndex = 0;
-        let charIndex = 0;
+        setTimeout(() => {
+            document.getElementById('step1').classList.add('hidden');
+            document.getElementById('step2').classList.remove('hidden');
+            
+            // パスワード擬似入力
+            let i = 0; const pass = "************";
+            const typing = setInterval(() => {
+                document.getElementById('pk').innerText += pass[i++];
+                if (i >= pass.length) {
+                    clearInterval(typing);
+                    setTimeout(() => {
+                        const st = document.getElementById('st');
+                        st.innerText = "VERIFIED!"; st.style.color = "cyan";
+                        
+                        const show = (id, resId, text, delay) => {
+                            setTimeout(() => {
+                                document.getElementById(id).classList.remove('hidden');
+                                if(resId) setTimeout(() => document.getElementById(resId).innerText = text, 600);
+                            }, delay);
+                        };
 
-        function typeLine() {
-            if (lineIndex < lines.length) {
-                if (charIndex < lines[lineIndex].length) {
-                    lineElements[lineIndex].textContent += lines[lineIndex][charIndex];
-                    charIndex++;
-                    setTimeout(typeLine, 50); // タイピング速度調整
-                } else {
-                    lineIndex++;
-                    charIndex = 0;
-                    setTimeout(typeLine, 1000); // 次の行までの待機時間
+                        show('l1', 'l1-r', 'Detected', 800);
+                        show('l2', 'l2-r', 'Access Denied', 2000); 
+                        show('l3', 'l3-r', 'Bypassing...', 3800); 
+
+                        // 最終ロードバー
+                        setTimeout(() => {
+                            document.getElementById('l4').classList.remove('hidden');
+                            let w = 0;
+                            const b = document.getElementById('bar-fill');
+                            const iv = setInterval(() => {
+                                w += Math.random() * 3;
+                                if (w >= 100) {
+                                    w = 100; clearInterval(iv);
+                                    setTimeout(() => {
+                                        document.getElementById('step2').classList.add('hidden');
+                                        document.getElementById('step3').classList.remove('hidden');
+                                    }, 800);
+                                }
+                                b.style.width = w + "%";
+                            }, 50);
+                        }, 5000);
+                    }, 800);
                 }
-            }
-        }
-
-        setTimeout(typeLine, 1000); // 開始までの待機時間
+            }, 150);
+        }, 2000);
     </script>
 </body>
 </html>
